<resources>
    <string name="app_name">StoryApp</string>
    <string name="passwordHint">Enter password!</string>
    <string name="register_email_hint">Enter Email!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="register_name_hint">Enter Username!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="detailName">name</string>
    <string name="detailDescription">Description</string>
    <string name="logout">Log Out</string>
    <string name="logoutConfirmation">Are you sure?</string>
    <string name="dialogbtnyes">Yes</string>
    <string name="dialogbtnno">No</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="uploadStoryDescription">Description</string>
    <string name="title_activity_story_locations">StoryLocationsActivity</string>
    <string name="story_location">Story Locations</string>
    <string name="retry">retry</string>
</resources>