<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.RegisterFragment"
        app:layoutDescription="@xml/fragment_register_scene">

    <EditText
            android:paddingHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/ed_register_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/register_email_hint"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_name"
            android:layout_marginTop="8dp"/>

    <EditText
            android:paddingHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/ed_register_name"
            android:layout_marginHorizontal="24dp"
            android:hint="@string/register_name_hint"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toEndOf="parent"/>

    <com.example.storyapp.customview.PasswordEditText
            android:paddingHorizontal="8dp"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email"
            android:id="@+id/ed_register_password"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            />

    <Button
            android:text="@string/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_password"
            android:layout_marginTop="32dp"
            tools:layout_editor_absoluteX="19dp"/>

    <TextView
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_already_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            android:layout_marginTop="16dp"
            />

    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="324dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>