<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="250dp"
      android:layout_height="150dp"
      android:layout_gravity="center">

    <TextView
            android:text="@string/logoutConfirmation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textSize="28sp"
            android:id="@+id/dialogTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"/>

    <Button
            android:layout_width="75dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.609"
            android:id="@+id/dialogBtnYes"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/dialogbtnyes"/>

    <Button
            android:id="@+id/dialogBtnNo"
            android:layout_width="75dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:text="@string/dialogbtnno"
            />

</androidx.constraintlayout.widget.ConstraintLayout>