<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.authentication.LoginFragment"
        app:layoutDescription="@xml/fragment_login_scene">


    <EditText
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/ed_login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="8dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/register_email_hint"
            android:background="@android:color/transparent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    <com.example.storyapp.customview.PasswordEditText
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:id="@+id/ed_login_password"
            android:paddingHorizontal="8dp"
            android:layout_marginHorizontal="24dp"
            android:inputType="textPassword"
            android:background="@android:color/transparent"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
            android:layout_marginTop="8dp"/>

    <Button
            android:text="@string/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_password"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_already_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginTop="16dp"/>

    <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            app:layout_constraintStart_toEndOf="@+id/tv_already_have_account"
            android:layout_marginEnd="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            android:layout_marginTop="16dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="182dp"
        tools:layout_editor_absoluteY="250dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.motion.widget.MotionLayout>
